support multi-dataset eval and profile-based analysis